# RoboticVUI

./: .gitignore  __init__.py  augmentation.py  classic_learning.py  config.py  dataset.py  dsp_utils.py  filesystem.py  frontend.py  healthcheck.py  inference.py  locator.py  models.py  models_data.py  pipeline_tests.py  services.py  tf_utils.py  train.py  training.py
core/: config.py  frontend.py  models.py  training.py
dataset/: augmentation.py  pipeline.py
experiments/1_lstm_encoder_60/: config.py  models.py  training.py
frontend/: abstract.py
infrastructure/: filesystem.py  locator.py
layers/: Similarity.py
model/: abstract.py  services.py
model/layers/: MassPooling.py
models/: abstract.py  data_access.py  services.py
models/layers/: Attention.py  CosSimilarity.py  ExtractPatches.py
recognition/: services.py
src/robotic_vui/: README.md  config.py  inference.py  train.py
src/robotic_vui/dataset/: pipeline.py
training/: abstract.py
vui/: LICENSE.txt  README.md  setup.py
vui/notebooks/: compression_experiments.py  frequency_experiments.py
vui/scripts/: cache_frontend.py  evaluate.py  healthcheck.py  inference.py  tensorboard.py  train.py
vui/tests/: augmentation_experiments.py  compression_experiments.py  dataset_control.ipynb  frontend_test.ipynb  pipeline_experiments.py
vui/vui/: __init__.py  config.py
vui/vui/dataset/: pipeline.py  (+2 more)
youbot/src/ros_vui/: CMakeLists.txt  package.xml
youbot/src/ros_vui/launch/: vui.launch
youbot/src/ros_vui/scripts/: command_listener.py  command_transform_node.py  speech_to_command.py  vui_node.py
(+52 files in other folders)
