<?xml version="1.0"?>
<package format="2">
  <name>ros_vui</name>
  <version>0.0.1</version>
  <description>Voice user interface for ROS</description>
  <maintainer email="p.seleznyov2005@yandex.ru">Pavel Seleznev</maintainer>
  <license>MTI</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
  
</package>
